Tue, 02 Oct 2007 17:59:29 +0200 <thp@perli.net>
Update channel models (icons) after iPod synchronization

	* src/gpodder/gui.py: Call update_model() on each channel after an
	iPod sync, so we can update the played state on the available episodes
	lists when played state was changed by the iPod sync

Sat, 29 Sep 2007 14:12:15 +0200 <thp@perli.net>
Fix loading of channel metadata (load auth data and settings)

	* src/gpodder/libpodcasts.py: Load channel metadata when loading a
	podcastChannel object from OPML/LocalDB. This fixes a problem with
	authentication data being not loaded and also fixes a bug when the
	custom-set channel title was not correctly used throughout the GUI.
	Thanks to Nick (nikosapi) for reporting and providing a patch

Tue, 25 Sep 2007 22:02:19 +0200 <thp@perli.net>
Finally remove Desktop symlink code; several compatibility fixes

	* src/gpodder/download.py: Prevent divide-by-zero errors when
	calculating download speed
	* src/gpodder/gui.py: Prevent divide-by-zero errors when calculating
	percentage done in code for moving the downloaded items folder
	* src/gpodder/libgpodder.py: Remove the "Symlink on Desktop" code,
	because it's not GUI-accessible anymore and we didn't use it anyway
	* src/gpodder/opml.py: Better local filename detection by using
	os.path.exists() instead of .startswith('/'); this is also good for
	cross-platform compatibility where parts don't usually start with a
	forward slash (i.e. Win32)

Mon, 24 Sep 2007 00:09:44 +0200 <thp@perli.net>
Channel list selection bug fixes

	* src/gpodder/gui.py: Fix some channel list-related problems and
	annoyances, based on a patch by Nick (nikosapi)
	* bin/gpodder: We're in development again, so "+svn"

Fri, 21 Sep 2007 02:07:43 +0200 <thp@perli.net>
gPodder 0.10.0 "Hier spricht Frank Drebin" released

	* bin/gpodder: gPodder 0.10.0 released :)
	* doc/man/gpodder.1: gPodder 0.10.0 released :)
	* README: gPodder 0.10.0 released :) (and: updated dependencies)